@@ -1,7 +1,9 @@
+.travis.yml
 Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,12 +20,20 @@ META.yml
 README
 SIGNATURE
 t/Map-Tube-Text-Table-Utils/00-use.t
+t/Map-Tube-Text-Table-Utils/01-use.t
 t/Map-Tube-Text-Table-Utils/01-version.t
 t/Map-Tube-Text-Table-Utils/02-pod_coverage.t
+t/Map-Tube-Text-Table-Utils/02-version.t
 t/Map-Tube-Text-Table-Utils/03-pod.t
 t/Map-Tube-Text-Table/00-use.t
+t/Map-Tube-Text-Table/01-use.t
 t/Map-Tube-Text-Table/01-version.t
 t/Map-Tube-Text-Table/02-pod_coverage.t
+t/Map-Tube-Text-Table/02-version.t
 t/Map-Tube-Text-Table/03-pod.t
 Table.pm
 Table/Utils.pm
+xt/Map-Tube-Text-Table-Utils/01-pod_coverage.t
+xt/Map-Tube-Text-Table-Utils/02-pod.t
+xt/Map-Tube-Text-Table/01-pod_coverage.t
+xt/Map-Tube-Text-Table/02-pod.t
