@@ -8,6 +8,12 @@ use inc::Module::Install;
 # Definition.
 abstract 'Table information about Map::Tube object.';
 author 'Michal Josef Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.08;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 license 'artistic_2';
 name 'Map-Tube-Text-Table';
@@ -29,8 +35,6 @@ test_requires 'English' => 0;
 test_requires 'File::Object' => 0.08;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.05';
 
